completed styling of desktop projects section

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
 
       <div id="projects" class="projects">
         <h1 class="projects__title" >My Projects</h1>
-        <div class="card">
+        <div class="projects__cards">
+        <div class="card--one">
           <img class="card__image" src="Imagewebpage.png" alt="Project Image" width="700px" />
           <main class="card__content">
             <h2 class="card__image-descriptor">REACT</h2>
@@ -124,7 +125,7 @@
             <button class="card__button--secondary">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
           </main>
         </div>
-        <div class="card">
+        <div class="card--two">
           <img class="card__image" src="Imagewebpage.png" alt="Project Image" width="700px" />
           <main class="card__content">
             <h2 class="card__image-descriptor">REACT</h2>
@@ -139,27 +140,7 @@
             <button class="card__button--secondary">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
           </main>
         </div>
-        <div class="card">
-          <img class="card__image" src="Imagewebpage.png" alt="Project Image" width="700px" />
-          <main class="card__content">
-            <h2 class="card__image-descriptor">REACT</h2>
-            <h3 class="card__header">Client Project</h3>
-            <p class="card__paragraph">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur
-              omnis voluptatum mollitia provident fugiat, dignissimos quisquam
-              eaque quidem voluptates nam tempora temporibus iste culpa cumque
-              quo ipsam aut! Reprehenderit, laudantium.
-            </p>
-            <div id="buttons">
-            <button class="card__button">Code <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
-            <button class="card__button--secondary">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
-            </div>
-          </main>
-        </div>
-      </div>
-
-      <div id="projects__secondary" class="projects__secondary">
-        <div class="card">
+        <div class="card--three">
           <img class="card__image" src="Imagewebpage.png" alt="Project Image" width="700px" />
           <main class="card__content">
             <h2 class="card__image-descriptor">REACT</h2>
@@ -174,7 +155,7 @@
             <button class="card__button--secondary">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
           </main>
         </div>
-        <div class="card">
+        <div class="card--four">
           <img class="card__image" src="Imagewebpage.png" alt="Project Image" width="700px" />
           <main class="card__content">
             <h2 class="card__image-descriptor">REACT</h2>
@@ -189,7 +170,22 @@
             <button class="card__button--secondary">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
           </main>
         </div>
-        <div class="card">
+        <div class="card--five">
+          <img class="card__image" src="Imagewebpage.png" alt="Project Image" width="700px" />
+          <main class="card__content">
+            <h2 class="card__image-descriptor">REACT</h2>
+            <h3 class="card__header">Client Project</h3>
+            <p class="card__paragraph">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur
+              omnis voluptatum mollitia provident fugiat, dignissimos quisquam
+              eaque quidem voluptates nam tempora temporibus iste culpa cumque
+              quo ipsam aut! Reprehenderit, laudantium.
+            </p>
+            <button class="card__button">Code <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
+            <button class="card__button--secondary">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
+          </main>
+        </div>
+        <div class="card--six">
           <img class="card__image" src="Imagewebpage.png"  alt="Project Image" width="700px" />
           <main class="card__content">
             <h2 class="card__image-descriptor">REACT</h2>
@@ -205,6 +201,7 @@
           </main>
         </div>
       </div>
+    </div>
 
       <br />
       <footer id="get-in-touch" class="footer">
