made changes to about occupation sizing for desktop version

--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
       <br />
       <footer id="get-in-touch" class="footer">
         <div class="footer__images">
-          <img src="Group 61LogoGithub.png" alt="Github Logo">
-          <img src="Group 60LogoLinkedIn.png" alt="LinkedIn Logo">
-          <img src="Group 39808Logo_CV.png" alt="CV">
+          <img class="footer__images--github" src="Group 61LogoGithub.png" alt="Github Logo">
+          <img class="footer__images--linkedin" src="Group 60LogoLinkedIn.png" alt="LinkedIn Logo">
+          <img class="footer__images--cv" src="Group 39808Logo_CV.png" alt="CV">
         </div>
         <a class="footer__email" href="katherine.villacis@nology.io">katherine.villacis@nology.io</a>
       </footer>
