--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <nav class="nav-bar">
       <h1 class="nav-bar__name">Katherine Villacis</h1>
       <a class="nav-bar__home" href="#home">Home</a>
-      <a class="nav-bar__about" href="#about-me">About</a>
+      <a class="nav-bar__about" href="#about">About</a>
       <a class="nav-bar__projects" href="#projects">Projects</a>
       <!-- <button class="nav-bar__getInTouch" href="#get-in-touch">Get In Touch</button> -->
       <a class="nav-bar__getInTouch" href="#get-in-touch">Get In Touch</a>
     </nav>
-    <header class="intro">
+    <header class="intro" id="home">
       <h1 class="intro__name">&#128513 Hey! I'm Katherine Villacis.</h1>
       <h2 class="intro__occupation">
         A Junior Software Developer based in London, England.
@@ -29,7 +29,7 @@
       />
     </header>
     <main>
-      <div class="about">
+      <div class="about" id="about">
         <h3 class="about__title">About Me</h3>
         <img
           class="about__image"
