added header button to index.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <h2 class="intro__occupation">
         A Junior Software Developer based in London, England.
       </h2>
+      <a class="intro__button" href="#projects">Take a look at my work &#10549</a>
       <img
         class="intro__image"
         src="programmer_icon.png"
