fixed email link in footer

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           <img class="footer__images--linkedin" src="Group 60LogoLinkedIn.png" alt="LinkedIn Logo">
           <img class="footer__images--cv" src="Group 39808Logo_CV.png" alt="CV">
         </div>
-        <a class="footer__email" href="katherine.villacis@nology.io">katherine.villacis@nology.io</a>
+        <a class="footer__email" href="mailto:katherine.villacis@nology.io">katherine.villacis@nology.io</a>
       </footer>
     </main>
     <aside></aside>
