--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="intro" id="home">
       <h1 class="intro__name">&#128513 Hey! I'm Katherine Villacis.</h1>
       <h2 class="intro__occupation">
-        A Junior Software Developer based in London, England.
+        A Junior <span class="intro__occupation--emphasis">Software Developer</span> based in London, England.
       </h2>
       <a class="intro__button" href="#projects">Take a look at my work &#10549</a>
       <img
