fixed BEM onto html file

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <div id="projects" class="projects">
         <h1 class="projects__title" >My Projects</h1>
         <div class="projects__cards">
-        <div class="card--one">
+        <div class="card-one">
           <img class="card__image" src="Imagewebpage.png" alt="Project Image" width="700px" />
           <main class="card__content">
             <h2 class="card__image-descriptor">REACT</h2>
@@ -123,10 +123,10 @@
               quo ipsam aut! Reprehenderit, laudantium.
             </p>
             <button class="card__button">Code <img class="card__button--image" src="VectorcodeSymbol.png" alt="Code Symbol"  ></button>
-            <button class="card__button--secondary">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
+            <button class="card__button">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
           </main>
         </div>
-        <div class="card--two">
+        <div class="card-two">
           <img class="card__image" src="Imagewebpage.png" alt="Project Image" width="700px" />
           <main class="card__content">
             <h2 class="card__image-descriptor">REACT</h2>
@@ -138,10 +138,10 @@
               quo ipsam aut! Reprehenderit, laudantium.
             </p>
             <button class="card__button">Code <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
-            <button class="card__button--secondary">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
+            <button class="card__button">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
           </main>
         </div>
-        <div class="card--three">
+        <div class="card-three">
           <img class="card__image" src="Imagewebpage.png" alt="Project Image" width="700px" />
           <main class="card__content">
             <h2 class="card__image-descriptor">REACT</h2>
@@ -153,10 +153,10 @@
               quo ipsam aut! Reprehenderit, laudantium.
             </p>
             <button class="card__button">Code <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
-            <button class="card__button--secondary">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
+            <button class="card__button">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
           </main>
         </div>
-        <div class="card--four">
+        <div class="card-four">
           <img class="card__image" src="Imagewebpage.png" alt="Project Image" width="700px" />
           <main class="card__content">
             <h2 class="card__image-descriptor">REACT</h2>
@@ -168,10 +168,10 @@
               quo ipsam aut! Reprehenderit, laudantium.
             </p>
             <button class="card__button">Code <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
-            <button class="card__button--secondary">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
+            <button class="card__button">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
           </main>
         </div>
-        <div class="card--five">
+        <div class="card-five">
           <img class="card__image" src="Imagewebpage.png" alt="Project Image" width="700px" />
           <main class="card__content">
             <h2 class="card__image-descriptor">REACT</h2>
@@ -183,10 +183,10 @@
               quo ipsam aut! Reprehenderit, laudantium.
             </p>
             <button class="card__button">Code <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
-            <button class="card__button--secondary">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
+            <button class="card__button">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
           </main>
         </div>
-        <div class="card--six">
+        <div class="card-six">
           <img class="card__image" src="Imagewebpage.png"  alt="Project Image" width="700px" />
           <main class="card__content">
             <h2 class="card__image-descriptor">REACT</h2>
@@ -198,7 +198,7 @@
               quo ipsam aut! Reprehenderit, laudantium.
             </p>
             <button class="card__button">Code <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
-            <button class="card__button--secondary">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
+            <button class="card__button">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
           </main>
         </div>
       </div>
