added links to projects

--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
   </head>
   <body>
     <nav class="nav-bar">
-      <h1 class="nav-bar__name">Katherine Villacis</h1>
+      <h1 class="nav-bar__name">Katherine Pilozo Villacis</h1>
       <a class="nav-bar__home" href="#home">Home</a>
       <a class="nav-bar__about" href="#about">About</a>
       <a class="nav-bar__projects" href="#projects">Projects</a>
-      <!-- <button class="nav-bar__getInTouch" href="#get-in-touch">Get In Touch</button> -->
       <a class="nav-bar__getInTouch" href="#get-in-touch">Get In Touch</a>
     </nav>
     <header class="intro" id="home">
-      <h1 class="intro__name">&#128513 Hey! I'm Katherine Villacis.</h1>
+      <h1 class="intro__name">&#128513 Hey! I'm Katherine Pilozo Villacis.</h1>
       <h2 class="intro__occupation">
         A Junior <span class="intro__occupation--emphasis">Software Developer</span> based in London, England.
       </h2>
@@ -36,37 +35,22 @@
           class="about__image"
           src="kat_portfolio_pic.png"
           alt="Katherine"
-          width="300px"
         />
         <div class="about__paragraph">
           <p >
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad illo
-            autem praesentium fugit aliquam culpa cum vitae aspernatur, magnam
-            commodi laboriosam sint cupiditate quas rerum quasi officia deleniti
-            tempore quam. Lorem ipsum dolor sit amet, consectetur adipisicing
-            elit. Magnam, consectetur aspernatur laboriosam animi libero id
-            assumenda similique dolorum nemo laudantium soluta sunt deleniti
-            corporis qui distinctio repudiandae ipsa, quia esse.
+            I'm an ambitious and adaptable indiviudual with a passion for learning new technologies.
+I thrive in environments that will both challenge me and provide opportunity for continuous learning and growth.</p> <br>
+<p>I work collaboratively within a team but am able to work alone as required.
+</p>
+<br>
+<p>I am due to complete the _nology full stack course  which has equipped me with a bountiful skillset and reinforced my drive to pursue a career in software development.
           </p>
-          <br>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis
-            expedita delectus, soluta a natus tenetur pariatur iure ipsum porro,
-            consequuntur cupiditate eum officiis corporis quidem necessitatibus
-            corrupti officia non quisquam! Lorem ipsum dolor sit, amet consectetur
-            adipisicing elit. Quis, reiciendis fugiat veritatis architecto ullam
-            a? A error sequi, culpa officia, recusandae facilis ex cumque enim
-            aperiam et maxime, soluta at!
-          </p>
-        </div>
+      </div>
       </div>
       <div class="skills">
         <h4 class="skills__title">Technical Skills</h4>
         <p class="skills__intro">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
-          reiciendis minus magnam laudantium nam, quia obcaecati corrupti
-          molestiae nulla consectetur non eius reprehenderit nisi. Omnis dolore
-          quas hic alias asperiores?
+          I am currently being trained in the following skillset:
         </p>
         <div class="skills__container">
           <div class="skills__container--item">
@@ -114,64 +98,60 @@
         <div class="card-one">
           <img class="card__image" src="Imagewebpage.png" alt="Project Image" width="700px" />
           <main class="card__content">
-            <h2 class="card__image-descriptor">REACT</h2>
-            <h3 class="card__header">Client Project</h3>
+            <h2 class="card__image-descriptor">HTML / CSS</h2>
+            <h3 class="card__header">Portfolio Website</h3>
             <p class="card__paragraph">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur
-              omnis voluptatum mollitia provident fugiat, dignissimos quisquam
-              eaque quidem voluptates nam tempora temporibus iste culpa cumque
-              quo ipsam aut! Reprehenderit, laudantium.
+              Built using correct version control and modern coding standards, and deployed live using a CI pipeline.
             </p>
-            <button class="card__button">Code <img class="card__button--image" src="VectorcodeSymbol.png" alt="Code Symbol"  ></button>
-            <button class="card__button">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
+            <a class="card__button" href="https://github.com/katherinepv/Portfolio" target="_blank">Code <img class="card__button--image" src="VectorcodeSymbol.png" alt="Code Symbol"></a>
+            <a class="card__button" href="https://katherinepv.github.io/Portfolio/" target="_blank">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></a>
+            <!-- <button class="card__button">Code <img class="card__button--image" src="VectorcodeSymbol.png" alt="Code Symbol"  ></button>
+            <button class="card__button">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button> -->
           </main>
         </div>
         <div class="card-two">
           <img class="card__image" src="Imagewebpage.png" alt="Project Image" width="700px" />
           <main class="card__content">
-            <h2 class="card__image-descriptor">REACT</h2>
-            <h3 class="card__header">Client Project</h3>
+            <h2 class="card__image-descriptor">JavaScript</h2>
+            <h3 class="card__header">Calculator Project</h3>
             <p class="card__paragraph">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur
-              omnis voluptatum mollitia provident fugiat, dignissimos quisquam
-              eaque quidem voluptates nam tempora temporibus iste culpa cumque
-              quo ipsam aut! Reprehenderit, laudantium.
+              A browser-based calculator using modern JavaScript programming techniques and DOM manipulation.
             </p>
-            <button class="card__button">Code <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
-            <button class="card__button">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
+            <a class="card__button" href="https://github.com/katherinepv/Calculator" target="_blank">Code <img src="VectorcodeSymbol.png" alt="Code Symbol"></a>
+            <a class="card__button" href="https://katherinepv.github.io/Calculator/" target="_blank">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></a>
+            <!-- <button class="card__button">Code <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
+            <button class="card__button">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button> -->
           </main>
         </div>
         <div class="card-three">
           <img class="card__image" src="Imagewebpage.png" alt="Project Image" width="700px" />
           <main class="card__content">
-            <h2 class="card__image-descriptor">REACT</h2>
-            <h3 class="card__header">Client Project</h3>
+            <h2 class="card__image-descriptor">JavaScript</h2>
+            <h3 class="card__header">Game Project</h3>
             <p class="card__paragraph">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur
-              omnis voluptatum mollitia provident fugiat, dignissimos quisquam
-              eaque quidem voluptates nam tempora temporibus iste culpa cumque
-              quo ipsam aut! Reprehenderit, laudantium.
+              A browser-based hangman game using modern JavaScript programming techniques and DOM manipulation.
             </p>
-            <button class="card__button">Code <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
-            <button class="card__button">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
+            <a class="card__button" href="https://github.com/katherinepv/hangman-game" target="_blank">Code <img src="VectorcodeSymbol.png" alt="Code Symbol"></a>
+            <a class="card__button" href="https://katherinepv.github.io/hangman-game/" target="_blank">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></a>
+            <!-- <button class="card__button">Code <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
+            <button class="card__button">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button> -->
           </main>
         </div>
         <div class="card-four">
           <img class="card__image" src="Imagewebpage.png" alt="Project Image" width="700px" />
           <main class="card__content">
             <h2 class="card__image-descriptor">REACT</h2>
-            <h3 class="card__header">Client Project</h3>
+            <h3 class="card__header">API Project</h3>
             <p class="card__paragraph">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur
-              omnis voluptatum mollitia provident fugiat, dignissimos quisquam
-              eaque quidem voluptates nam tempora temporibus iste culpa cumque
-              quo ipsam aut! Reprehenderit, laudantium.
+              A React applictaion that pulls data from an external public API and presents it in a multipage layout. (Current project).
             </p>
-            <button class="card__button">Code <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
-            <button class="card__button">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
+            <a class="card__button" href="https://github.com/katherinepv/punk-api-project" target="_blank">Code <img src="VectorcodeSymbol.png" alt="Code Symbol"></a>
+            <a class="card__button" href="https://punk-api-project-liard.vercel.app/" target="_blank">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></a>
+            <!-- <button class="card__button">Code <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
+            <button class="card__button">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button> -->
           </main>
         </div>
-        <div class="card-five">
+        <!-- <div class="card-five">
           <img class="card__image" src="Imagewebpage.png" alt="Project Image" width="700px" />
           <main class="card__content">
             <h2 class="card__image-descriptor">REACT</h2>
@@ -200,7 +180,7 @@
             <button class="card__button">Code <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
             <button class="card__button">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></button>
           </main>
-        </div>
+        </div> -->
       </div>
     </div>
 
