changed text on project descriptions

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ I thrive in environments that will both challenge me and provide opportunity for
             <h2 class="card__image-descriptor">REACT</h2>
             <h3 class="card__header">API Project</h3>
             <p class="card__paragraph">
-              A React applictaion that pulls data from an external public API and presents it in a multipage layout. (Current project).
+              A React application that pulls data from an external public API and presents it in a multipage layout. (Current project).
             </p>
             <a class="card__button" href="https://github.com/katherinepv/punk-api-project" target="_blank">Code <img src="VectorcodeSymbol.png" alt="Code Symbol"></a>
             <a class="card__button" href="https://punk-api-project-liard.vercel.app/" target="_blank">Preview <img src="VectorcodeSymbol.png" alt="Code Symbol"></a>
