updated calculator pic

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           </div>
         </div>
         <div class="card-two">
-          <img class="card__mobile-image" src="calculator-screenshot.png" alt="Project Image" width="700px" />
+          <img class="card__mobile-image" src="calc-screenshot.png" alt="Project Image" width="700px" />
           <div class="card__content">
             <h3 class="card__image-descriptor">JavaScript</h3>
             <h4 class="card__header">Calculator Project</h4>
