--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="nav-bar">
-      <h2 class="nav-bar__name">Katherine Pilozo Villacis</h2>
+      <h2 class="nav-bar__name">Katherine Villacis</h2>
       <a class="nav-bar__home" href="#home">Home</a>
       <a class="nav-bar__about" href="#about">About</a>
       <a class="nav-bar__projects" href="#projects">Projects</a>
@@ -17,7 +17,7 @@
     </nav>
     <main>
       <header class="intro" id="home">
-        <h1 class="intro__name">&#128513 Hey! I'm Katherine Pilozo Villacis.</h1>
+        <h1 class="intro__name">&#128513 Hey! I'm Katherine Villacis.</h1>
         <h2 class="intro__occupation">
           A Junior <span class="intro__occupation--emphasis">Software Developer</span> based in London, England.
         </h2>
@@ -90,7 +90,7 @@
         <h2 class="projects__title" >My Projects</h2>
         <div class="projects__cards">
         <div class="card-one">
-          <img class="card__web-image" src="portfolio-screenshot.png" alt="Project Image" width="700px" />
+          <img class="card__image card__image--web" src="portfolio-screenshot.png" alt="Project Image" width="700px" />
           <div class="card__content">
             <h3 class="card__image-descriptor">HTML / CSS</h3>
             <h4 class="card__header">Portfolio Website</h4>
@@ -104,7 +104,7 @@
           </div>
         </div>
         <div class="card-two">
-          <img class="card__mobile-image" src="calc-screenshot.png" alt="Project Image" width="700px" />
+          <img class="card__image card__image--mobile" src="calc-screenshot.png" alt="Project Image" width="700px" />
           <div class="card__content">
             <h3 class="card__image-descriptor">JavaScript</h3>
             <h4 class="card__header">Calculator Project</h4>
@@ -118,7 +118,7 @@
           </div>
         </div>
         <div class="card-three">
-          <img class="card__mobile-image" src="hangman-screenshot.png" alt="Project Image" width="700px" />
+          <img class="card__image card__image--mobile" src="hangman-screenshot.png" alt="Project Image" width="700px" />
           <div class="card__content">
             <h3 class="card__image-descriptor">JavaScript</h3>
             <h4 class="card__header">Game Project</h4>
@@ -132,7 +132,7 @@
           </div>
         </div>
         <div class="card-four">
-          <img class="card__web-image" src="beer-api-screenshot.png" alt="Project Image" width="700px" />
+          <img class="card__image card__image--web" src="beer-api-screenshot.png" alt="Project Image" width="700px" />
           <div class="card__content">
             <h3 class="card__image-descriptor">REACT</h3>
             <h4 class="card__header">API Project</h4>
@@ -181,9 +181,9 @@
       <br />
       <footer id="get-in-touch" class="footer">
         <div class="footer__images">
-          <img class="footer__images--github" src="Group 61LogoGithub.png" alt="Github Logo">
-          <img class="footer__images--linkedin" src="Group 60LogoLinkedIn.png" alt="LinkedIn Logo">
-          <img class="footer__images--cv" src="Group 39808Logo_CV.png" alt="CV">
+          <a href="https://github.com/katherinepv" target="_blank"><img class="footer__images--github" src="Group 61LogoGithub.png" alt="Github Logo"></a>
+          <a href="https://www.linkedin.com/in/katherine-pilozo-villacis-15271223b/" target="_blank"><img class="footer__images--linkedin" src="Group 60LogoLinkedIn.png" alt="LinkedIn Logo"></a>
+          <a href="" target="_blank"><img class="footer__images--cv" src="Group 39808Logo_CV.png" alt="CV"></a>
         </div>
         <a class="footer__email" href="mailto:katherine.villacis@nology.io">katherine.villacis@nology.io</a>
       </footer>
